# buddha

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  baseRenderWindow.cpp  baseRenderWindow.h  benchmark.cpp  buddha  buddha++.pro  buddha.cpp  buddha.files  buddha.h  buddha.includes  buddha.pro  buddhaGenerator.cpp  buddhaGenerator.h  build-opencl.sh  complex.h  controlWindow.cpp  controlWindow.h  convertImage.cl  demoWindow.cpp  demoWindow.h  exclusion.cpp  main.cpp  merger.cpp  option.cpp  option.h  options.cpp  options.h  pngSaver.cpp  pngSaver.h  random.h  render.cpp  renderWindow.cpp  renderWindow.h  staticStuff.cpp  staticStuff.h  staticutils.cpp  (+1 more)
core/: CMakeLists.txt  atomic_wrapper.h  buddha.cpp  buddha.h  buddhaGenerator.cpp  buddhaGenerator.h  buddha_generator.cpp  buddha_generator.h  buddha_timer.cpp  buddha_timer.h  complex.h  formula.h  mandelbrot.h  mandelbrot_base.h  option.cpp  option.h  options.cpp  options.h  saver.h  settings.cpp  settings.h  settings_parser.cpp  settings_parser.h  utils.h
gui/: controlWindow.cpp  controlWindow.h  main.cpp  renderWindow.cpp  renderWindow.h
interesting/: [-1.26235, -0.408171].xml  [-1.99638, 0].xml
legacy/: Sconstruct  buddha-com.c  buddha-lib.c  buddha-parser.c  buddha-server.c  buddha.c  buddha.h  launch.sh
opencl/lib/: libQtOpenCL.so.1  libQtOpenCL.so.1.0.0  libQtOpenCLGL.so.1.0.0
opencl/src/: Makefile
opencl/src/opencl/: Makefile
opencl/src/openclgl/: Makefile
test/: benchmark.cpp  concurrency.cpp  random.cpp  test.cpp
